--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -341,6 +341,8 @@ helm-deploy:
     - helm upgrade power bitnami/nginx -n "$CI_COMMIT_REF_NAME" -f "./chart/values-$CI_COMMIT_REF_NAME.yaml" --install
       --set-string commonLabels.commit="$CI_COMMIT_SHORT_SHA"
       --set-string commonAnnotations.deployedAt="$CI_JOB_STARTED_AT"
+      --set-string podLabels.commit="$CI_COMMIT_SHORT_SHA"
+      --set-string podAnnotations.deployedAt="$CI_JOB_STARTED_AT"
   only:
     - dev
     - staging
@@ -366,6 +368,8 @@ helm-deploy:branches:
     - helm upgrade "$CI_COMMIT_REF_NAME" bitnami/nginx -n dev -f ./chart/values-dev.yaml --install
       --set-string commonLabels.commit="$CI_COMMIT_SHORT_SHA"
       --set-string commonAnnotations.deployedAt="$CI_JOB_STARTED_AT"
+      --set-string podLabels.commit="$CI_COMMIT_SHORT_SHA"
+      --set-string podAnnotations.deployedAt="$CI_JOB_STARTED_AT"
       --set-string image.tag="$CI_COMMIT_REF_NAME"
       --set ingress.hostname="$CI_COMMIT_REF_NAME.power-cluster-65655d4c73bf47a3300821aa2939abf4-0001.eu-de.containers.appdomain.cloud"
       --set ingress.extraHosts[0].name="$CI_COMMIT_REF_NAME.power.niedersachsen.dev"
