--- a/chart/values-prod.yaml
+++ b/chart/values-prod.yaml
@@ -790,6 +790,10 @@ healthIngress:
 metrics:
   enabled: true
 
+  ## Specify which port is used by the exporter to retrieve the NGINX status.
+  ## Defaults to specified http port
+  port: 8080
+
   ## Bitnami NGINX Prometheus Exporter image
   ## ref: https://hub.docker.com/r/bitnami/nginx-exporter/tags/
   ##
