--- a/chart/values-staging.yaml
+++ b/chart/values-staging.yaml
@@ -2,10 +2,10 @@
 ## Please, note that this will override the image parameters, including dependencies, configured to use the global value
 ## Current available global Docker image parameters: imageRegistry and imagePullSecrets
 ##
-global:
-  imagePullSecrets:
-    - de-icr-io
+# global:
 #   imageRegistry: myRegistryName
+#   imagePullSecrets:
+#     - myRegistryKeySecretName
 
 ## Bitnami NGINX image version
 ## ref: https://hub.docker.com/r/bitnami/nginx/tags/
@@ -23,11 +23,9 @@ image:
   ## Secrets must be manually created in the namespace.
   ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
   ## E.g.:
-  ## pullSecrets:
-  ##   - myRegistryKeySecretName
-  ##
   pullSecrets:
-    - name: de-icr-io
+    - de-icr-io
+  ##
   ## Set to true if you would like to see extra information on logs
   ##
   debug: true
