--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,7 +23,7 @@ http {
     log_format    main '$remote_addr - $remote_user [$time_local] '
                        '"$request" $status  $body_bytes_sent "$http_referer" '
                        '"$http_user_agent" "$http_x_forwarded_for"';
-    log_format my_tracking '$request_time [Frontend] $request_body';
+    log_format my_tracking '$time_local [Frontend] $request_body';
     access_log    "/dev/stdout";
     add_header    X-Frame-Options SAMEORIGIN;
 
