--- a/chart/values-dev.yaml
+++ b/chart/values-dev.yaml
@@ -378,7 +378,8 @@ extraVolumes:
 ##
 extraVolumeMounts:
   - name: power-config
-    mountPath: /opt/bitnami/nginx/conf/server_blocks/common
+    mountPath: /opt/bitnami/nginx/conf/server_blocks
+    subPath: power.conf
     readOnly: true
   - name: bitnami-tmp
     mountPath: /opt/bitnami/nginx/tmp
@@ -615,6 +616,7 @@ initContainers:
     volumeMounts:
       - name: power-config
         mountPath: /server_blocks/
+        subPath: power.conf
     env:
       - name: BKG_GEOCODING_SECRET
         valueFrom:
