--- a/power/package.json
+++ b/power/package.json
@@ -41,6 +41,7 @@
         "@turf/point-on-feature": "^6.4.0",
         "@turf/projection": "^6.4.0",
         "@turf/union": "^6.4.0",
+        "@types/polylabel": "^1.0.5",
         "bootstrap": "^4.6.0",
         "bootstrap-icons": "^1.5.0",
         "core-js": "^3.15.2",
@@ -55,6 +56,7 @@
         "ngx-showdown": "^6.0.0",
         "ngx-smooth-dnd": "^0.4.1",
         "nouislider": "^15.2.0",
+        "polylabel": "^1.1.0",
         "proj4": "^2.7.4",
         "rxjs": "^6.6.7",
         "rxjs-compat": "^6.6.7",
