--- a/nginx/custom/security.conf
+++ b/nginx/custom/security.conf
@@ -1,7 +1,7 @@
 # security header
 proxy_cookie_path / "/; HTTPOnly; Secure";
 add_header Strict-Transport-Security "max-age=31536000; includeSubdomains;" always;
-add_header Content-Security-Policy "default-src 'none'; script-src 'self' 'unsafe-eval'; style-src 'unsafe-inline' 'self'; img-src 'self' https: data:; font-src 'self'; object-src 'none'; manifest-src 'self'; child-src 'self' blob:; worker-src 'self' blob:; base-uri 'self'; form-action 'self'; frame-ancestors 'self'; connect-src 'self' https:;" always;
+add_header Content-Security-Policy "default-src 'none'; script-src 'self' 'unsafe-eval'; style-src 'unsafe-inline' 'self'; img-src 'self' https: data:; font-src 'self'; manifest-src 'self'; child-src 'self' blob:; worker-src 'self' blob:; base-uri 'self'; form-action 'self'; frame-ancestors 'self'; connect-src 'self' https:;" always;
 add_header X-Content-Type-Options "nosniff" always;
 add_header Access-Control-Allow-Origin "*" always;
 add_header Cross-Origin-Resource-Policy "same-origin" always;
@@ -9,7 +9,7 @@ add_header Cross-Origin-Opener-Policy "same-origin" always;
 add_header Cross-Origin-Embedder-Policy "require-corp" always;
 add_header Referrer-Policy "no-referrer" always;
 add_header Expect-CT "max-age=86400, enforce" always;
-add_header Permissions-Policy "geolocation=(self),camera=(),microphone=(),usb=(),payment=(),fullscreen=()" always;
+add_header Permissions-Policy "geolocation=(self),camera=(),microphone=(),display-capture=(),usb=(),web-share=(),payment=(),publickey-credentials-get=(),fullscreen=(),autoplay=(),midi=(),screen-wake-lock=()" always;
 add_header X-Frame-Options "DENY" always;
 add_header X-XSS-Protection "1; mode=block" always;
 
