Added redirect www. -> non-www

--- a/nginx/server/power.conf
+++ b/nginx/server/power.conf
@@ -1,5 +1,11 @@
 server {
   listen 8081;
+  server_name www.immobilienmarkt.niedersachsen.de;
+  return 301 https://immobilienmarkt.niedersachsen.de$request_uri;
+}
+
+server {
+  listen 8081 default_server;
   root /app;
   access_log off;
 
