--- a/power/package.json
+++ b/power/package.json
@@ -35,12 +35,12 @@
         "@angular/service-worker": "^12.1.1",
         "@ng-bootstrap/ng-bootstrap": "^10.0.0",
         "@nguniversal/express-engine": "^12.1.0",
-        "@turf/area": "^6.4.0",
-        "@turf/buffer": "^6.4.0",
-        "@turf/intersect": "^6.4.0",
-        "@turf/point-on-feature": "^6.4.0",
-        "@turf/projection": "^6.4.0",
-        "@turf/union": "^6.4.0",
+        "@turf/area": "^6.5.0",
+        "@turf/buffer": "^6.5.0",
+        "@turf/intersect": "^6.5.0",
+        "@turf/point-on-feature": "^6.5.0",
+        "@turf/projection": "^6.5.0",
+        "@turf/union": "^6.5.0",
         "bootstrap": "^4.6.0",
         "bootstrap-icons": "^1.5.0",
         "core-js": "^3.15.2",
@@ -48,7 +48,7 @@
         "fuse.js": "^6.4.6",
         "geojson": "^0.5.0",
         "hyphen": "^1.6.4",
-        "maplibre-gl": "~1.14.0",
+        "maplibre-gl": "^1.15.2",
         "ngx-bootstrap": "^6.2.0",
         "ngx-echarts": "^6.0.1",
         "ngx-showdown": "^6.0.0",
@@ -59,7 +59,7 @@
         "rxjs": "^6.6.7",
         "rxjs-compat": "^6.6.7",
         "showdown": "^1.9.1",
-        "survey-angular": "^1.8.54",
+        "survey-angular": "^1.8.56",
         "tslib": "^2.3.0",
         "web-animations-js": "^2.3.2",
         "zone.js": "~0.11.4"
@@ -67,35 +67,35 @@
     "devDependencies": {
         "@angular-devkit/architect": "^0.1201.1",
         "@angular-devkit/build-angular": "^12.1.1",
-        "@angular-eslint/builder": "^12.2.0",
-        "@angular-eslint/eslint-plugin": "^12.2.0",
-        "@angular-eslint/eslint-plugin-template": "^12.2.0",
-        "@angular-eslint/schematics": "^12.2.0",
-        "@angular-eslint/template-parser": "^12.2.0",
+        "@angular-eslint/builder": "^12.3.0",
+        "@angular-eslint/eslint-plugin": "^12.3.0",
+        "@angular-eslint/eslint-plugin-template": "^12.3.0",
+        "@angular-eslint/schematics": "^12.3.0",
+        "@angular-eslint/template-parser": "^12.3.0",
         "@angular/cli": "^12.1.1",
         "@angular/compiler-cli": "^12.1.1",
         "@angular/language-service": "^12.1.1",
         "@nguniversal/builders": "^12.1.0",
         "@schematics/angular": "^12.1.1",
-        "@types/express": "^4.17.12",
-        "@types/geojson": "^7946.0.7",
-        "@types/jasmine": "^3.7.7",
-        "@types/jasminewd2": "^2.0.9",
-        "@types/maplibre-gl": "^1.13.1",
-        "@types/node": "^14.17.4",
+        "@types/express": "^4.17.13",
+        "@types/geojson": "^7946.0.8",
+        "@types/jasmine": "^3.8.1",
+        "@types/jasminewd2": "^2.0.10",
+        "@types/maplibre-gl": "^1.14.0",
+        "@types/node": "^14.17.5",
         "@types/polylabel": "^1.0.5",
-        "@types/showdown": "^1.9.3",
-        "@typescript-eslint/eslint-plugin": "^4.28.2",
-        "@typescript-eslint/parser": "^4.28.2",
+        "@types/showdown": "^1.9.4",
+        "@typescript-eslint/eslint-plugin": "^4.28.3",
+        "@typescript-eslint/parser": "^4.28.3",
         "create-object-url": "^1.0.2",
         "domino": "^2.1.6",
         "eslint": "^7.30.0",
-        "eslint-plugin-jsdoc": "^35.4.1",
+        "eslint-plugin-jsdoc": "^35.4.3",
         "eslint-plugin-no-unsanitized": "^3.1.5",
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "eslint-plugin-scanjs-rules": "^0.2.1",
         "express": "^4.15.2",
-        "html-validate": "^5.0.2",
+        "html-validate": "^5.1.1",
         "jasmine-core": "^3.8.0",
         "jasmine-reporters": "^2.4.0",
         "jasmine-spec-reporter": "^7.0.0",
@@ -103,7 +103,7 @@
         "karma-chrome-launcher": "^3.1.0",
         "karma-coverage": "^2.0.3",
         "karma-jasmine": "^4.0.1",
-        "karma-jasmine-html-reporter": "^1.6.0",
+        "karma-jasmine-html-reporter": "^1.7.0",
         "karma-junit-reporter": "^2.0.1",
         "node-blob": "^0.0.2",
         "postcss": "^8.3.5",
@@ -111,7 +111,7 @@
         "resize-observer-polyfill": "^1.5.1",
         "stylelint": "^13.13.1",
         "stylelint-config-standard": "^22.0.0",
-        "ts-node": "^10.0.0",
+        "ts-node": "^10.1.0",
         "typescript": "~4.2.4"
     },
     "browser": {
