Initial demo pdf

--- a/power/package.json
+++ b/power/package.json
@@ -54,6 +54,7 @@
         "ngx-showdown": "^6.0.0",
         "ngx-smooth-dnd": "^0.4.1",
         "nouislider": "^15.2.0",
+        "pdfmake": "^0.2.0",
         "polylabel": "^1.1.0",
         "proj4": "^2.7.4",
         "rxjs": "^6.6.7",
@@ -85,12 +86,12 @@
         "@types/node": "^14.17.5",
         "@types/polylabel": "^1.0.5",
         "@types/showdown": "^1.9.4",
-        "@typescript-eslint/eslint-plugin": "^4.28.3",
-        "@typescript-eslint/parser": "^4.28.3",
+        "@typescript-eslint/eslint-plugin": "^4.28.4",
+        "@typescript-eslint/parser": "^4.28.4",
         "create-object-url": "^1.0.2",
         "domino": "^2.1.6",
-        "eslint": "^7.30.0",
-        "eslint-plugin-jsdoc": "^35.4.3",
+        "eslint": "^7.31.0",
+        "eslint-plugin-jsdoc": "^35.5.0",
         "eslint-plugin-no-unsanitized": "^3.1.5",
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "eslint-plugin-scanjs-rules": "^0.2.1",
