add a reverse proxy for the boris umrechnungstabellen

--- a/nginx/server/power.conf
+++ b/nginx/server/power.conf
@@ -79,6 +79,16 @@ server {
     include "/opt/bitnami/nginx/conf/custom/proxy.conf";
   }
 
+    location /boris-umdatei/ {
+    rewrite ^\/boris-umdatei\/(.*) /boris-umrechnungsdateien/$1 break;
+    proxy_pass https://s3.private.eu-de.cloud-object-storage.appdomain.cloud/;
+
+    proxy_hide_header x-amz-request-id;
+    proxy_hide_header x-clv-request-id;
+    proxy_hide_header x-clv-s3-version;
+    include "/opt/bitnami/nginx/conf/custom/proxy.conf";
+  }
+
   location /download/ {
     rewrite ^\/download\/(.*) /grundstuecksmarktberichte/$1 break;
     proxy_pass https://s3.private.eu-de.cloud-object-storage.appdomain.cloud/;
