--- a/power/.eslintrc.json
+++ b/power/.eslintrc.json
@@ -75,7 +75,7 @@
                     "always"
                 ],
                 "no-console": [
-                    "warn",
+                    "error",
                     {
                         "allow": [
                             "warn",
@@ -98,6 +98,8 @@
                 "@typescript-eslint/explicit-module-boundary-types": "off",
                 "@angular-eslint/component-selector": "off",
                 "@angular-eslint/directive-selector": "off",
+                "jsdoc/require-jsdoc": 1,
+                "jsdoc/require-description": 1,
                 "jsdoc/newline-after-description": "off",
                 "jsdoc/require-param-type": "off",
                 "jsdoc/require-returns-type": "off",
@@ -154,7 +156,7 @@
                 "@angular-eslint/template/click-events-have-key-events": "warn",
                 "@angular-eslint/template/mouse-events-have-key-events": "error",
                 "@angular-eslint/template/i18n": [
-                    "warn",
+                    "error",
                     {
                         "checkId": false,
                         "checkText": false,
