--- a/power/package.json
+++ b/power/package.json
@@ -33,6 +33,7 @@
         "@angular/platform-server": "^12.1.1",
         "@angular/router": "^12.1.1",
         "@angular/service-worker": "^12.1.1",
+        "@juggle/resize-observer": "^3.3.1",
         "@ng-bootstrap/ng-bootstrap": "^10.0.0",
         "@nguniversal/express-engine": "^12.1.0",
         "@turf/area": "^6.4.0",
