Disable new html-validate rule

--- a/power/ngsw-config.json
+++ b/power/ngsw-config.json
@@ -42,6 +42,7 @@
         "!/geoserver/**",
         "!/vector-tiles/**",
         "!/download/**",
+        "!/boris-umdatei/**",
         "!/formapi/**",
         "!/feedback-rss/**"
     ],
