--- a/power/ngsw-config.json
+++ b/power/ngsw-config.json
@@ -22,9 +22,7 @@
             "resources": {
                 "files": [
                     "/assets/**",
-                    "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)",
-                    "!/assets/config/config.json",
-                    "!/assets/version.json"
+                    "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
                 ],
                 "urls": [
                     "/vector-tiles/**"
