--- a/power/ngsw-config.json
+++ b/power/ngsw-config.json
@@ -22,7 +22,9 @@
             "resources": {
                 "files": [
                     "/assets/**",
-                    "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
+                    "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)",
+                    "!/assets/config/config.json",
+                    "!/assets/version.json"
                 ],
                 "urls": [
                     "/vector-tiles/**"
