--- a/power/package.json
+++ b/power/package.json
@@ -19,9 +19,23 @@
     },
     "private": true,
     "dependencies": {
-        "@juggle/resize-observer": "^3.3.1",
+        "@angular-devkit/core": "^12.1.4",
+        "@angular-devkit/schematics": "^12.1.4",
+        "@angular/animations": "^12.1.4",
+        "@angular/cdk": "^12.1.4",
+        "@angular/common": "^12.1.4",
+        "@angular/compiler": "^12.1.4",
+        "@angular/core": "^12.1.4",
+        "@angular/forms": "^12.1.4",
+        "@angular/localize": "^12.1.4",
+        "@angular/platform-browser": "^12.1.4",
+        "@angular/platform-browser-dynamic": "^12.1.4",
+        "@angular/platform-server": "^12.1.4",
+        "@angular/router": "^12.1.4",
+        "@angular/service-worker": "^12.1.4",
         "@ng-bootstrap/ng-bootstrap": "^10.0.0",
         "@nguniversal/express-engine": "^12.1.0",
+	"@juggle/resize-observer": "^3.3.1",
         "@turf/area": "^6.5.0",
         "@turf/buffer": "^6.5.0",
         "@turf/intersect": "^6.5.0",
@@ -30,8 +44,8 @@
         "@turf/union": "^6.5.0",
         "bootstrap": "^4.6.0",
         "bootstrap-icons": "^1.5.0",
+        "core-js": "^3.16.0",
         "echarts": "^5.0.2",
-        "echarts": "^4.9.0",
         "fuse.js": "^6.4.6",
         "geojson": "^0.5.0",
         "hyphen": "^1.6.4",
