Added umrechnungsdateien to pdf modal

--- a/power/angular.json
+++ b/power/angular.json
@@ -54,7 +54,8 @@
                             "echarts",
                             "hyphen",
                             "showdown",
-                            "rbush"
+                            "rbush",
+                            "polylabel"
                         ],
                         "vendorChunk": true,
                         "extractLicenses": false,
