--- a/power/.eslintrc.json
+++ b/power/.eslintrc.json
@@ -102,18 +102,24 @@
                     "warn",
                     {
                         "contexts": [
-                            "FunctionDeclaration",
+                            "TSDeclareFunction",
+                            "TSEnumDeclaration",
                             "TSInterfaceDeclaration",
-                            "TSMethodSignature"
+                            "TSMethodSignature",
+                            "TSModuleDeclaration",
+                            "TSTypeAliasDeclaration"
                         ],
                         "require": {
-                            "FunctionDeclaration": true,
-                            "MethodDefinition": true,
-                            "ClassDeclaration": false,
                             "ArrowFunctionExpression": false,
-                            "FunctionExpression": false
+                            "ClassDeclaration": false,
+                            "ClassExpression": false,
+                            "FunctionDeclaration": true,
+                            "FunctionExpression": false,
+                            "MethodDefinition": true
                         },
                         "publicOnly": true,
+                        "checkGetters": true,
+                        "checkSetters": true,
                         "checkConstructors": false
                     }
                 ],
