--- a/power/package.json
+++ b/power/package.json
@@ -67,7 +67,7 @@
     },
     "devDependencies": {
         "@angular-devkit/architect": "^0.1202.1",
-        "@angular-devkit/build-angular": "^12.2.1",
+        "@angular-devkit/build-angular": "~12.1.4",
         "@angular-eslint/builder": "^12.3.1",
         "@angular-eslint/eslint-plugin": "^12.3.1",
         "@angular-eslint/eslint-plugin-template": "^12.3.1",
