--- a/power/tsconfig.base.json
+++ b/power/tsconfig.base.json
@@ -3,15 +3,25 @@
     "compilerOptions": {
         "baseUrl": "./src",
         "outDir": "./dist/out-tsc",
+        "forceConsistentCasingInFileNames": true,
+        "strict": false,
+        "noPropertyAccessFromIndexSignature": false,
+        "noImplicitReturns": false,
+        "noFallthroughCasesInSwitch": true,
         "sourceMap": true,
-        "allowJs": true,
         "declaration": false,
         "downlevelIteration": true,
-        "module": "es2020",
-        "moduleResolution": "node",
-        "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "target": "es2015",
+        "moduleResolution": "node",
+        "importHelpers": true,
+        "target": "es2017",
+        "module": "es2020",
+        "lib": [
+            "es2018",
+            "dom"
+        ],
+        "allowJs": true,
+        "resolveJsonModule": true,
         "types": [
             "node"
         ],
@@ -28,16 +38,12 @@
             "echarts": [
                 "node_modules/echarts/dist/echarts.min.js"
             ]
-        },
-        "lib": [
-            "es2017",
-            "dom"
-        ],
-        "resolveJsonModule": true
+        }
     },
     "angularCompilerOptions": {
-        "enableIvy": true,
         "enableI18nLegacyMessageIdFormat": false,
-        "trace": false
+        "strictInjectionParameters": true,
+        "strictInputAccessModifiers": true,
+        "strictTemplates": false
     }
 }
