--- a/power/package.json
+++ b/power/package.json
@@ -80,10 +80,12 @@
         "@schematics/angular": "^12.2.1",
         "@types/express": "^4.17.13",
         "@types/geojson": "^7946.0.8",
+        "@types/hyphen": "^1.6.5",
         "@types/jasmine": "^3.8.2",
         "@types/jasminewd2": "^2.0.10",
         "@types/maplibre-gl": "^1.14.0",
         "@types/node": "^14.17.9",
+        "@types/pdfmake": "^0.1.18",
         "@types/polylabel": "^1.0.5",
         "@types/showdown": "^1.9.4",
         "@typescript-eslint/eslint-plugin": "^4.29.1",
@@ -109,7 +111,6 @@
         "node-blob": "^0.0.2",
         "postcss": "^8.3.6",
         "protractor": "^7.0.0",
-        "resize-observer-polyfill": "^1.5.1",
         "stylelint": "^13.13.1",
         "stylelint-config-standard": "^22.0.0",
         "ts-node": "^10.2.0",
