Fixed compiler errors

--- a/power/tsconfig.base.json
+++ b/power/tsconfig.base.json
@@ -5,8 +5,8 @@
         "outDir": "./dist/out-tsc",
         "forceConsistentCasingInFileNames": true,
         "strict": false,
-        "noPropertyAccessFromIndexSignature": false,
-        "noImplicitReturns": false,
+        "noPropertyAccessFromIndexSignature": true,
+        "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
         "sourceMap": true,
         "declaration": false,
