Fixed compiler errors

--- a/power/angular.json
+++ b/power/angular.json
@@ -55,7 +55,8 @@
                             "hyphen",
                             "showdown",
                             "rbush",
-                            "polylabel"
+                            "polylabel",
+                            "pdfmake/build/pdfmake"
                         ],
                         "vendorChunk": true,
                         "extractLicenses": false,
