Revert ngx-bootstrap update

--- a/power/package.json
+++ b/power/package.json
@@ -33,9 +33,9 @@
         "@angular/platform-server": "^12.2.1",
         "@angular/router": "^12.2.1",
         "@angular/service-worker": "^12.2.1",
+        "@juggle/resize-observer": "^3.3.1",
         "@ng-bootstrap/ng-bootstrap": "^10.0.0",
         "@nguniversal/express-engine": "^12.1.0",
-        "@juggle/resize-observer": "^3.3.1",
         "@turf/area": "^6.5.0",
         "@turf/buffer": "^6.5.0",
         "@turf/intersect": "^6.5.0",
@@ -44,16 +44,16 @@
         "@turf/union": "^6.5.0",
         "bootstrap": "^4.6.0",
         "bootstrap-icons": "^1.5.0",
-        "core-js": "^3.16.1",
+        "core-js": "^3.16.2",
         "echarts": "^5.0.2",
         "fuse.js": "^6.4.6",
         "geojson": "^0.5.0",
         "hyphen": "^1.6.4",
-        "maplibre-gl": "=1.14.0",
-        "ngx-bootstrap": "^7.0.0",
+        "maplibre-gl": "~1.14.0",
+        "ngx-bootstrap": "^6.2.0",
         "ngx-showdown": "^6.0.0",
         "ngx-smooth-dnd": "^0.4.1",
-        "nouislider": "^15.3.0",
+        "nouislider": "^15.4.0",
         "pdfmake": "^0.2.2",
         "polylabel": "^1.1.0",
         "proj4": "^2.7.5",
@@ -88,8 +88,8 @@
         "@types/pdfmake": "^0.1.18",
         "@types/polylabel": "^1.0.5",
         "@types/showdown": "^1.9.4",
-        "@typescript-eslint/eslint-plugin": "^4.29.1",
-        "@typescript-eslint/parser": "^4.29.1",
+        "@typescript-eslint/eslint-plugin": "^4.29.2",
+        "@typescript-eslint/parser": "^4.29.2",
         "create-object-url": "^1.0.2",
         "domino": "^2.1.6",
         "eslint": "^7.32.0",
