--- a/power/tsconfig.base.json
+++ b/power/tsconfig.base.json
@@ -5,7 +5,7 @@
         "outDir": "./dist/out-tsc",
         "forceConsistentCasingInFileNames": true,
         "strict": false,
-        "noPropertyAccessFromIndexSignature": false,
+        "noPropertyAccessFromIndexSignature": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
         "sourceMap": true,
@@ -20,8 +20,8 @@
             "es2018",
             "dom"
         ],
-        "allowUnreachableCode": true,
-        "allowUnusedLabels": true,
+        "allowUnreachableCode": false,
+        "allowUnusedLabels": false,
         "noUncheckedIndexedAccess": false,
         "noUnusedLocals": true,
         "noUnusedParameters": false,
