Updated project files

--- a/power/.eslintrc.json
+++ b/power/.eslintrc.json
@@ -11,8 +11,8 @@
             "parser": "@typescript-eslint/parser",
             "parserOptions": {
                 "project": [
-                    "src/tsconfig.app.json",
-                    "src/tsconfig.spec.json"
+                    "tsconfig.app.json",
+                    "tsconfig.spec.json"
                 ],
                 "createDefaultProgram": true
             },
