--- a/power/tsconfig.json
+++ b/power/tsconfig.json
@@ -1,20 +1,55 @@
-/*
-  This is a "Solution Style" tsconfig.json file, and is used by editors and TypeScript’s language server to improve development experience.
-  It is not intended to be used to perform a compilation.
-
-  To learn more about this file see: https://angular.io/config/solution-tsconfig.
-*/
+/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-    "files": [],
-    "references": [
-        {
-            "path": "./src/tsconfig.app.json"
-        },
-        {
-            "path": "./src/tsconfig.spec.json"
-        },
-        {
-            "path": "./e2e/tsconfig.e2e.json"
+    "compileOnSave": false,
+    "compilerOptions": {
+        "baseUrl": "./",
+        "outDir": "./dist/out-tsc",
+        "forceConsistentCasingInFileNames": true,
+        "strict": false,
+        "noPropertyAccessFromIndexSignature": true,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
+        "sourceMap": true,
+        "declaration": false,
+        "downlevelIteration": true,
+        "experimentalDecorators": true,
+        "moduleResolution": "node",
+        "importHelpers": true,
+        "target": "es2017",
+        "module": "es2020",
+        "lib": [
+            "es2018",
+            "dom"
+        ],
+        "allowUnreachableCode": false,
+        "allowUnusedLabels": false,
+        "noUncheckedIndexedAccess": false,
+        "noUnusedLocals": true,
+        "noUnusedParameters": false,
+        "types": [
+            "node",
+            "jasmine"
+        ],
+        "typeRoots": [
+            "node_modules/@types"
+        ],
+        "paths": {
+            "@app/*": [
+                "src/app/*"
+            ],
+            "@env/*": [
+                "src/environments/*"
+            ],
+            "echarts": [
+                "node_modules/echarts/dist/echarts.min.js"
+            ]
         }
-    ]
+    },
+    "angularCompilerOptions": {
+        "enableI18nLegacyMessageIdFormat": false,
+        "strictInjectionParameters": true,
+        "strictInputAccessModifiers": true,
+        "fullTemplateTypeCheck": true,
+        "strictTemplates": true
+    }
 }
