--- a/power/tsconfig.sonar.json
+++ b/power/tsconfig.sonar.json
@@ -1,10 +1,8 @@
-/*
-  This is tsconfig is not used for compilation. It is here to support sonarqube.
-*/
+/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-    "extends": "./tsconfig.base.json",
+    "extends": "./tsconfig.json",
     "compilerOptions": {
-        "outDir": "./out-tsc/app",
+        "outDir": "./out-tsc/sonar",
         "rootDir": "src"
     }
 }
