--- a/power/tsconfig.json
+++ b/power/tsconfig.json
@@ -24,6 +24,7 @@
         "allowUnreachableCode": false,
         "allowUnusedLabels": false,
         "noUncheckedIndexedAccess": false,
+        "noImplicitOverride": true,
         "noUnusedLocals": true,
         "noUnusedParameters": false,
         "types": [
