--- a/power/.eslintrc.json
+++ b/power/.eslintrc.json
@@ -87,11 +87,23 @@
                         "args": "none"
                     }
                 ],
+                "@typescript-eslint/array-type": [
+                    "error",
+                    {
+                        "default": "array-simple"
+                    }
+                ],
+                "lines-between-class-members": "off",
+                "@typescript-eslint/lines-between-class-members": "off",
                 "quotes": [
                     "error",
                     "single"
                 ],
                 "@typescript-eslint/quotes": "off",
+                "require-await": "off",
+                "@typescript-eslint/require-await": "error",
+                "no-return-await": "off",
+                "@typescript-eslint/return-await": "error",
                 "no-duplicate-imports": "off",
                 "@typescript-eslint/no-duplicate-imports": "error",
                 "no-implied-eval": "off",
@@ -104,18 +116,57 @@
                 "@typescript-eslint/no-loop-func": "error",
                 "no-shadow": "off",
                 "@typescript-eslint/no-shadow": "error",
+                "comma-dangle": "off",
+                "@typescript-eslint/comma-dangle": "error",
+                "comma-spacing": "off",
+                "@typescript-eslint/comma-spacing": "error",
+                "semi": "off",
+                "@typescript-eslint/semi": "error",
+                "no-extra-semi": "off",
+                "@typescript-eslint/no-extra-semi": "error",
+                "default-param-last": "off",
+                "@typescript-eslint/default-param-last": "error",
+                "keyword-spacing": "off",
+                "@typescript-eslint/keyword-spacing": "error",
+                "@typescript-eslint/await-thenable": "error",
+                "@typescript-eslint/ban-types": "error",
+                "@typescript-eslint/no-confusing-void-expression": [
+                    "error",
+                    {
+                        "ignoreArrowShorthand": true
+                    }
+                ],
                 "@typescript-eslint/no-misused-promises": "error",
                 "@typescript-eslint/no-misused-new": "error",
                 "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
                 "@typescript-eslint/no-non-null-assertion": "error",
                 "@typescript-eslint/no-empty-interface": "error",
                 "@typescript-eslint/no-dynamic-delete": "error",
-                "@typescript-eslint/no-var-requires": "off",
+                "@typescript-eslint/no-this-alias": "error",
+                "@typescript-eslint/no-require-imports": "error",
+                "@typescript-eslint/no-var-requires": "error",
                 "@typescript-eslint/no-explicit-any": "off",
-                "@typescript-eslint/consistent-type-assertions": "error",
+                "@typescript-eslint/no-unsafe-return": "off",
                 "@typescript-eslint/member-ordering": "off",
                 "@typescript-eslint/naming-convention": "off",
                 "@typescript-eslint/prefer-for-of": "off",
+                "@typescript-eslint/consistent-type-assertions": "error",
+                "@typescript-eslint/prefer-nullish-coalescing": "error",
+                "@typescript-eslint/prefer-optional-chain": "error",
+                "@typescript-eslint/prefer-enum-initializers": "error",
+                "@typescript-eslint/prefer-regexp-exec": "error",
+                "@typescript-eslint/prefer-return-this-type": "warn",
+                "@typescript-eslint/prefer-string-starts-ends-with": "error",
+                "@typescript-eslint/prefer-readonly": "off",
+                "@typescript-eslint/prefer-readonly-parameter-types": "off",
+                "@typescript-eslint/type-annotation-spacing": "error",
+                "@typescript-eslint/promise-function-async": "error",
+                "@typescript-eslint/explicit-function-return-type": [
+                    "error",
+                    {
+                        "allowExpressions": true
+                    }
+                ],
                 "@angular-eslint/component-selector": "off",
                 "@angular-eslint/directive-selector": "off",
                 "@typescript-eslint/no-floating-promises": "error",
@@ -195,6 +246,17 @@
                 "scanjs-rules/property_localStorage": "off",
                 "scanjs-rules/property_mgmt": 1,
                 "scanjs-rules/property_sessionStorage": 1
+            }
+        },
+        {
+            "files": [
+                "*.spec.ts"
+            ],
+            "parser": "@typescript-eslint/parser",
+            "rules": {
+                "@typescript-eslint/no-require-imports": "off",
+                "@typescript-eslint/no-var-requires": "off",
+                "@typescript-eslint/no-explicit-any": "off"
             }
         },
         {
