--- a/power/package.json
+++ b/power/package.json
@@ -20,20 +20,20 @@
     },
     "private": true,
     "dependencies": {
-        "@angular-devkit/core": "^12.2.3",
-        "@angular-devkit/schematics": "^12.2.3",
-        "@angular/animations": "^12.2.3",
-        "@angular/cdk": "^12.2.3",
-        "@angular/common": "^12.2.3",
-        "@angular/compiler": "^12.2.3",
-        "@angular/core": "^12.2.3",
-        "@angular/forms": "^12.2.3",
-        "@angular/localize": "^12.2.3",
-        "@angular/platform-browser": "^12.2.3",
-        "@angular/platform-browser-dynamic": "^12.2.3",
-        "@angular/platform-server": "^12.2.3",
-        "@angular/router": "^12.2.3",
-        "@angular/service-worker": "^12.2.3",
+        "@angular-devkit/core": "^12.2.4",
+        "@angular-devkit/schematics": "^12.2.4",
+        "@angular/animations": "^12.2.4",
+        "@angular/cdk": "^12.2.4",
+        "@angular/common": "^12.2.4",
+        "@angular/compiler": "^12.2.4",
+        "@angular/core": "^12.2.4",
+        "@angular/forms": "^12.2.4",
+        "@angular/localize": "^12.2.4",
+        "@angular/platform-browser": "^12.2.4",
+        "@angular/platform-browser-dynamic": "^12.2.4",
+        "@angular/platform-server": "^12.2.4",
+        "@angular/router": "^12.2.4",
+        "@angular/service-worker": "^12.2.4",
         "@juggle/resize-observer": "^3.3.1",
         "@ng-bootstrap/ng-bootstrap": "^10.0.0",
         "@nguniversal/express-engine": "^12.1.0",
@@ -45,12 +45,12 @@
         "@turf/union": "^6.5.0",
         "bootstrap": "^4.6.0",
         "bootstrap-icons": "^1.5.0",
-        "core-js": "^3.16.4",
-        "echarts": "^5.0.2",
+        "core-js": "^3.17.2",
+        "echarts": "^5.2.0",
         "fuse.js": "^6.4.6",
         "geojson": "^0.5.0",
         "hyphen": "^1.6.4",
-        "maplibre-gl": "^1.14.0-rc.1",
+        "maplibre-gl": "~1.14.0",
         "ngx-bootstrap": "^7.0.1",
         "ngx-showdown": "^6.0.0",
         "ngx-smooth-dnd": "^0.4.1",
@@ -61,36 +61,36 @@
         "rxjs": "^6.6.7",
         "rxjs-compat": "^6.6.7",
         "showdown": "^1.9.1",
-        "survey-angular": "^1.8.63",
+        "survey-angular": "^1.8.64",
         "tslib": "^2.3.1",
         "web-animations-js": "^2.3.2",
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/architect": "^0.1202.3",
+        "@angular-devkit/architect": "^0.1202.4",
         "@angular-devkit/build-angular": "~12.1.4",
         "@angular-eslint/builder": "^12.3.1",
         "@angular-eslint/eslint-plugin": "^12.3.1",
         "@angular-eslint/eslint-plugin-template": "^12.3.1",
         "@angular-eslint/schematics": "^12.3.1",
         "@angular-eslint/template-parser": "^12.3.1",
-        "@angular/cli": "^12.2.3",
-        "@angular/compiler-cli": "^12.2.3",
-        "@angular/language-service": "^12.2.3",
+        "@angular/cli": "^12.2.4",
+        "@angular/compiler-cli": "^12.2.4",
+        "@angular/language-service": "^12.2.4",
         "@nguniversal/builders": "^12.1.0",
-        "@schematics/angular": "^12.2.3",
+        "@schematics/angular": "^12.2.4",
         "@types/express": "^4.17.13",
         "@types/geojson": "^7946.0.8",
         "@types/hyphen": "^1.6.5",
-        "@types/jasmine": "^3.8.2",
+        "@types/jasmine": "^3.9.0",
         "@types/jasminewd2": "^2.0.10",
         "@types/maplibre-gl": "^1.14.0",
-        "@types/node": "^14.17.12",
+        "@types/node": "^14.17.14",
         "@types/pdfmake": "^0.1.18",
         "@types/polylabel": "^1.0.5",
         "@types/showdown": "^1.9.4",
-        "@typescript-eslint/eslint-plugin": "^4.29.3",
-        "@typescript-eslint/parser": "^4.29.3",
+        "@typescript-eslint/eslint-plugin": "^4.30.0",
+        "@typescript-eslint/parser": "^4.30.0",
         "create-object-url": "^1.0.2",
         "domino": "^2.1.6",
         "eslint": "^7.32.0",
@@ -99,9 +99,9 @@
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "eslint-plugin-scanjs-rules": "^0.2.1",
         "express": "^4.15.2",
-        "html-validate": "^5.4.1",
+        "html-validate": "^5.5.0",
         "jasmine-core": "^3.9.0",
-        "jasmine-reporters": "^2.4.0",
+        "jasmine-reporters": "^2.5.0",
         "jasmine-spec-reporter": "^7.0.0",
         "karma": "^6.3.4",
         "karma-chrome-launcher": "^3.1.0",
