add extension recommendations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,7 @@
         "power"
     ],
     "editor.detectIndentation": false,
-    "scssFormatter.singleQuote": true
+    "scssFormatter.singleQuote": true,
+    "yaml.format.enable": true,
+    "yaml.format.singleQuote": true
 }
