--- a/power/.eslintrc.json
+++ b/power/.eslintrc.json
@@ -20,6 +20,7 @@
                 "scanjs-rules"
             ],
             "extends": [
+                "eslint:recommended",
                 "plugin:@typescript-eslint/recommended",
                 "plugin:@angular-eslint/recommended",
                 "plugin:@angular-eslint/template/process-inline-templates",
