Added new linter rules

--- a/power/.eslintrc.json
+++ b/power/.eslintrc.json
@@ -82,6 +82,73 @@
                         ]
                     }
                 ],
+                "no-await-in-loop": "error",
+                "no-template-curly-in-string": "error",
+                "no-unreachable-loop": "error",
+                "no-unsafe-optional-chaining": "error",
+                "require-atomic-updates": "error",
+                "class-methods-use-this": "off",
+                "curly": "error",
+                "default-case": "error",
+                "default-case-last": "error",
+                "dot-location": [
+                    "error",
+                    "property"
+                ],
+                "grouped-accessor-pairs": "error",
+                "guard-for-in": "error",
+                "no-floating-decimal": "error",
+                "no-extra-label": "error",
+                "no-extra-bind": "error",
+                "no-eval": "error",
+                "no-eq-null": "error",
+                "no-else-return": "error",
+                "no-constructor-return": "error",
+                "no-caller": "error",
+                "no-warning-comments": "warn",
+                "no-void": "off",
+                "no-useless-return": "error",
+                "no-useless-concat": "error",
+                "no-useless-call": "error",
+                "no-unmodified-loop-condition": "error",
+                "no-throw-literal": "error",
+                "no-sequences": "error",
+                "no-self-compare": "error",
+                "no-proto": "error",
+                "no-param-reassign": "error",
+                "no-octal-escape": "error",
+                "no-nonoctal-decimal-escape": "error",
+                "no-new-wrappers": "error",
+                "no-new-func": "error",
+                "no-new": "error",
+                "no-lone-blocks": "error",
+                "no-iterator": "error",
+                "no-implicit-coercion": "error",
+                "prefer-promise-reject-errors": "error",
+                "prefer-regex-literals": "error",
+                "radix": "error",
+                "require-unicode-regexp": "off",
+                "vars-on-top": "error",
+                "yoda": "error",
+                "no-label-var": "error",
+                "arrow-parens": "error",
+                "arrow-spacing": "error",
+                "no-confusing-arrow": "error",
+                "no-useless-computed-key": "error",
+                "no-useless-constructor": "off",
+                "no-useless-rename": "error",
+                "no-var": "error",
+                "prefer-arrow-callback": "error",
+                "prefer-const": "error",
+                "prefer-rest-params": "error",
+                "prefer-spread": "error",
+                "sort-imports": "off",
+                "template-curly-spacing": "error",
+                "yield-star-spacing": "error",
+                "object-curly-spacing": [
+                    "off",
+                    "always"
+                ],
                 "@typescript-eslint/no-unused-vars": [
                     "warn",
                     {
@@ -95,7 +162,7 @@
                     }
                 ],
                 "lines-between-class-members": "off",
-                "@typescript-eslint/lines-between-class-members": "off",
+                "@typescript-eslint/lines-between-class-members": "error",
                 "quotes": [
                     "error",
                     "single"
@@ -105,6 +172,8 @@
                 "@typescript-eslint/require-await": "error",
                 "no-return-await": "off",
                 "@typescript-eslint/return-await": "error",
+                "no-unused-expressions": "off",
+                "@typescript-eslint/no-unused-expressions": "error",
                 "no-duplicate-imports": "off",
                 "@typescript-eslint/no-duplicate-imports": "error",
                 "no-implied-eval": "off",
@@ -148,7 +217,8 @@
                 "@typescript-eslint/no-var-requires": "error",
                 "@typescript-eslint/no-explicit-any": "off",
                 "@typescript-eslint/no-unsafe-return": "off",
-                "@typescript-eslint/member-ordering": "off",
+                "@typescript-eslint/no-namespace": "error",
+                "@typescript-eslint/no-parameter-properties": "off",
                 "@typescript-eslint/naming-convention": "off",
                 "@typescript-eslint/prefer-for-of": "off",
                 "@typescript-eslint/consistent-type-assertions": "error",
@@ -162,6 +232,7 @@
                 "@typescript-eslint/prefer-readonly-parameter-types": "off",
                 "@typescript-eslint/type-annotation-spacing": "error",
                 "@typescript-eslint/promise-function-async": "error",
+                "@typescript-eslint/member-ordering": "error",
                 "@typescript-eslint/explicit-function-return-type": [
                     "error",
                     {
@@ -195,7 +266,8 @@
                             "TSInterfaceDeclaration",
                             "TSMethodSignature",
                             "TSModuleDeclaration",
-                            "TSTypeAliasDeclaration"
+                            "TSTypeAliasDeclaration",
+                            "ClassProperty"
                         ],
                         "require": {
                             "ArrowFunctionExpression": false,
