--- a/power/.eslintrc.json
+++ b/power/.eslintrc.json
@@ -150,7 +150,7 @@
                     "always"
                 ],
                 "@typescript-eslint/no-unused-vars": [
-                    "warn",
+                    "error",
                     {
                         "args": "none"
                     }
@@ -190,6 +190,8 @@
                 "@typescript-eslint/comma-dangle": "error",
                 "comma-spacing": "off",
                 "@typescript-eslint/comma-spacing": "error",
+                "no-redeclare": "off",
+                "@typescript-eslint/no-redeclare": "error",
                 "semi": "off",
                 "@typescript-eslint/semi": "error",
                 "no-extra-semi": "off",
@@ -200,6 +202,7 @@
                 "@typescript-eslint/keyword-spacing": "error",
                 "@typescript-eslint/await-thenable": "error",
                 "@typescript-eslint/ban-types": "error",
+                "@typescript-eslint/no-confusing-non-null-assertion": "error",
                 "@typescript-eslint/no-confusing-void-expression": [
                     "error",
                     {
@@ -210,6 +213,17 @@
                 "@typescript-eslint/no-misused-new": "error",
                 "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
                 "@typescript-eslint/no-non-null-assertion": "error",
+                "@typescript-eslint/no-unnecessary-boolean-literal-compare": "error",
+                "@typescript-eslint/no-unnecessary-condition": [
+                    "off",
+                    {
+                        "allowRuleToRunWithoutStrictNullChecksIKnowWhatIAmDoing": true
+                    }
+                ],
+                "@typescript-eslint/no-unnecessary-qualifier": "error",
+                "@typescript-eslint/no-unnecessary-type-arguments": "error",
+                "@typescript-eslint/no-unnecessary-type-assertion": "error",
+                "@typescript-eslint/no-unnecessary-type-constraint": "error",
                 "@typescript-eslint/no-empty-interface": "error",
                 "@typescript-eslint/no-dynamic-delete": "error",
                 "@typescript-eslint/no-this-alias": "error",
@@ -217,10 +231,12 @@
                 "@typescript-eslint/no-var-requires": "error",
                 "@typescript-eslint/no-explicit-any": "off",
                 "@typescript-eslint/no-unsafe-return": "off",
+                "@typescript-eslint/no-unsafe-assignment": "off",
                 "@typescript-eslint/no-namespace": "error",
                 "@typescript-eslint/no-parameter-properties": "off",
                 "@typescript-eslint/naming-convention": "off",
                 "@typescript-eslint/prefer-for-of": "off",
+                "@typescript-eslint/restrict-plus-operands": "off",
                 "@typescript-eslint/consistent-type-assertions": "error",
                 "@typescript-eslint/prefer-nullish-coalescing": "error",
                 "@typescript-eslint/prefer-optional-chain": "error",
