--- a/chart/values-prod.yaml
+++ b/chart/values-prod.yaml
@@ -885,7 +885,7 @@ metrics:
 ## ref: https://kubernetes.io/docs/tasks/run-application/configure-pdb/
 ##
 pdb:
-  create: true
+  create: false
   ## Min number of pods that must still be available after the eviction
   ##
   minAvailable: 1
