Add dynamic incident messages

--- a/nginx/server/power.conf
+++ b/nginx/server/power.conf
@@ -91,6 +91,14 @@ server {
     proxy_hide_header x-clv-s3-version;
     include "/opt/bitnami/nginx/conf/custom/proxy.conf";
   }
+
+  location /status/ {
+    rewrite ^\/status\/(.*) /api/v1/$1 break;
+    proxy_pass https://status.immobilienmarkt.niedersachsen.de/;
+
+    include "/opt/bitnami/nginx/conf/custom/proxy.conf";
+  }
+
   location /report {
     if ($request_method != POST) {
       return 405;
