Added imprint, privacy, tos and accessibility page

--- a/power/angular.json
+++ b/power/angular.json
@@ -313,6 +313,10 @@
                             "/logout",
                             "/feedback",
                             "/ogc-dienste",
+                            "/impressum",
+                            "/datenschutz",
+                            "/nutzungsbedingungen",
+                            "/barrierefreiheit",
                             "/notfound",
                             "/bodenrichtwerte",
                             "/grundstuecksmarktberichte",
