--- a/nginx/server/power.conf
+++ b/nginx/server/power.conf
@@ -95,6 +95,7 @@ server {
   location /status/ {
     rewrite ^\/status\/(.*) /api/v1/$1 break;
     proxy_pass https://status.immobilienmarkt.niedersachsen.de/;
+    proxy_set_header Authorization "Basic aW1tb21hcmt0OnlxJH5kIk4oWDJkTFI7WU94fisuRDRcJDQK";
 
     include "/opt/bitnami/nginx/conf/custom/proxy.conf";
   }
